<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/add_city_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:textColor="@color/white_purple"
        android:textSize="20sp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/padding_dialog_title"
        android:gravity="center_vertical" />
    <ProgressBar
        android:gravity="center"
        android:layout_width="50dp"
        android:visibility="gone"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:layout_margin="@dimen/default_margin"
        android:id="@+id/loading_add_city"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center_horizontal" />
    <EditText
        android:id="@+id/et_city"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/city" />

</LinearLayout>